--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section>
     <header class="text-center">
         <h1>el encabezado de la página</h1>
-      </header
+      </header>
     <main>
       <div class= "total">
       <div class="medio verde">Un Contenido</div>
@@ -53,3 +53,4 @@
   </section>
 
   </body>
+  </html>
